--- a/ProjectDiamondShop/Views/Diamonds/Diamonds.cshtml
+++ b/ProjectDiamondShop/Views/Diamonds/Diamonds.cshtml
@@ -23,10 +23,87 @@
         .transparent-button:hover {
             color: #f0f0f0;
         }
+
+    .range_container {
+        display: flex;
+        flex-direction: column;
+        width: 80%;
+        margin: 15px auto;
+    }
+
+    .sliders_control {
+        position: relative;
+        min-height: 20px;
+    }
+
+    .form_control {
+        position: relative;
+        display: flex;
+        justify-content: space-between;
+        font-size: 15px;
+        color: #635a5a;
+    }
+
+    input[type=range]::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        pointer-events: all;
+        width: 12px;
+        height: 12px;
+        background-color: #fff;
+        border-radius: 50%;
+        box-shadow: 0 0 0 1px #C6C6C6;
+        cursor: pointer;
+    }
+
+    input[type=range]::-moz-range-thumb {
+        -webkit-appearance: none;
+        pointer-events: all;
+        width: 12px;
+        height: 12px;
+        background-color: #fff;
+        border-radius: 50%;
+        box-shadow: 0 0 0 1px #C6C6C6;
+        cursor: pointer;
+    }
+
+    input[type=range]::-webkit-slider-thumb:hover {
+        background: #f7f7f7;
+    }
+
+    input[type=range]::-webkit-slider-thumb:active {
+        box-shadow: inset 0 0 3px #387bbe, 0 0 9px #387bbe;
+        -webkit-box-shadow: inset 0 0 3px #387bbe, 0 0 9px #387bbe;
+    }
+
+    input[type="number"] {
+        color: #8a8383;
+        width: 80px;
+        height: 30px;
+        font-size: 12px;
+        border: none;
+    }
+
+    input[type=number]::-webkit-inner-spin-button,
+    input[type=number]::-webkit-outer-spin-button {
+        opacity: 1;
+    }
+
+    input[type="range"] {
+        -webkit-appearance: none;
+        appearance: none;
+        height: 2px;
+        width: 100%;
+        position: absolute;
+        background-color: #C6C6C6;
+        pointer-events: none;
+    }
+
+    #fromSlider {
+        height: 0;
+        z-index: 1;
+    }
 </style>
-<link href="~/Content/bootstrap.css" rel="stylesheet" />
 <link href="~/Content/ProductCss/style.css" rel="stylesheet" />
-<link href="~/Content/bootstrap.min.css" rel="stylesheet" />
 <link href="~/Content/ProductCss/bootstrap.min.css" rel="stylesheet" />
 <link href="~/Content/ProductCss/owl.theme.default.min.css" rel="stylesheet" />
 <link href="~/Content/ProductCss/animate.css" rel="stylesheet" />
@@ -134,101 +211,97 @@
             @Html.DropDownList("SortBy", (SelectList)ViewBag.SortOptions, new { @class = "form-control" })
         </div>
     </div>
-
-    <section id="new-arrivals" class="new-arrivals">
-        <div class="container">
-            <div class="new-arrivals-content">
-                <div class="row">
-                    @foreach (var item in Model)
-                    {
-                        string[] imagepart = item.diamondImagePath.Split('|');
-                        <div class="col-md-3 col-sm-4">
-                            <a href="@Url.Action("ViewDiamond", "Diamonds", new { id = item.diamondID })">
-                                <div class="single-new-arrival">
-                                    <div class="single-new-arrival-bg">
-                                        <img src="@imagepart[0]" alt="new-arrivals images" style="width:100%">
-                                        <div class="single-new-arrival-bg-overlay"></div>
-                                        <div class="new-arrival-cart">
-                                            <div class="arrival-review pull-right">
-                                                @using (Html.BeginForm("AddToCart", "Cart", FormMethod.Post))
-                                                {
-                                                    @Html.Hidden("diamondID", item.diamondID)
-                                                    @Html.Hidden("diamondName", item.diamondName)
-                                                    @Html.Hidden("diamondPrice", item.diamondPrice)
-                                                    <span class="lnr lnr-cart" style="color: #f0f0f0;"></span><input type="submit" class="transparent-button" value="Add to Cart" />
-                                                }
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <h4 style="height: 40px"><a href="@Url.Action("ViewDiamond", "Diamonds", new { id = item.diamondID })">@item.diamondName</a></h4>
-                                    <p class="arrival-product-price">$@item.diamondPrice</p>
-                                </div>
-                            </a>
-                        </div>
-                    }
-                </div>
-            </div>
-        </div>
-    </section>
-
-        int startPage = Math.Max(1, ViewBag.CurrentPage - 2);
-        int endPage = Math.Min(ViewBag.NumOfPage, ViewBag.CurrentPage + 2);
-
-
-    <div class="container">
-        <ul class="pagination row">
-            @using (Html.BeginForm("Fillter", "Diamonds", FormMethod.Post, new { id = "paginationForm" }))
-            {
-                @Html.AntiForgeryToken()
-                <input type="hidden" name="page" id="pageNumber" value="" />
-                <input type="hidden" name="SearchTerm" value="@ViewBag.SearchTerm" />
-                <input type="hidden" name="Clarity" value="@ViewBag.SelectedClarity" />
-                <input type="hidden" name="Cut" value="@ViewBag.SelectedCut" />
-                <input type="hidden" name="Color" value="@ViewBag.SelectedColor" />
-                <input type="hidden" name="Shape" value="@ViewBag.SelectedShape" />
-                <input type="hidden" name="MinPrice" value="@ViewBag.minPrice" />
-                <input type="hidden" name="MaxPrice" value="@ViewBag.maxPrice" />
-                <input type="hidden" name="MinCaratWeight" value="@ViewBag.minCaratWeight" />
-                <input type="hidden" name="MaxCaratWeight" value="@ViewBag.maxCaratWeight" />
-                if (ViewBag.CurrentPage > 3)
-                {
-                    <li class="page-item col-lg-2">
-                        <button type="button" class="btn btn-link" onclick="setPageValue(1);"><span class="lnr lnr-chevron-left"> </span></button>
-                    </li>
-                }
-                for (int i = startPage; i <= endPage; i++)
-                {
-                    <li class="page-item col-lg-1 @(i == ViewBag.CurrentPage ? "active" : "")">
-                        <button type="button" class="btn btn-link @(i == ViewBag.CurrentPage ? "selected" : "")" onclick="setPageValue(@i);">@i</button>
-                    </li>
-                }
-                if (ViewBag.CurrentPage < ViewBag.NumOfPage - 5)
-                {
-                    <li class="page-item col-lg-1">
-                        <button type="button" class="btn btn-link" onclick="setPageValue(@ViewBag.NumOfPage);">Last</button>
-                    </li>
-                }
-            }
-        </ul>
-    </div>
-
-    <script>
-        function setPageValue(page) {
-            document.getElementById("pageNumber").value = page;
-            document.getElementById("paginationForm").submit();
-        }
-    </script>
-    <script>
-        function setPageValue(page) {
-            document.getElementById("pageNumber").value = page;
-            document.getElementById("paginationForm").submit();
-        }
-    </script>
-
-    @Html.Hidden("CurrentPage", (int)ViewBag.CurrentPage)
-    @Html.Hidden("PageSize", 12)
 }
 
+<section id="new-arrivals" class="new-arrivals">
+    <div class="container">
+        <div class="new-arrivals-content">
+            <div class="row">
+                @foreach (var item in Model)
+                {
+                    string[] imagepart = item.diamondImagePath.Split('|');
+                    <div class="col-md-3 col-sm-4">
+                        <a href="@Url.Action("ViewDiamond", "Diamonds", new { id = item.diamondID })">
+                            <div class="single-new-arrival">
+                                <div class="single-new-arrival-bg">
+                                    <img src="@imagepart[0]" alt="new-arrivals images" style="width:100%">
+                                    <div class="single-new-arrival-bg-overlay"></div>
+                                    <div class="new-arrival-cart">
+                                        <div class="arrival-review pull-right">
+                                            @using (Html.BeginForm("AddToCart", "Cart", FormMethod.Post))
+                                            {
+                                                @Html.Hidden("diamondID", item.diamondID)
+                                                @Html.Hidden("diamondName", item.diamondName)
+                                                @Html.Hidden("diamondPrice", item.diamondPrice)
+                                                <span class="lnr lnr-cart" style="color: #f0f0f0;"></span>
+                                                <input type="submit" class="transparent-button" value="Add to Cart" />
+                                            }
+                                        </div>
+                                    </div>
+                                </div>
+                                <h4 style="height: 40px"><a href="@Url.Action("ViewDiamond", "Diamonds", new { id = item.diamondID })">@item.diamondName</a></h4>
+                                <p class="arrival-product-price">$@item.diamondPrice</p>
+                            </div>
+                        </a>
+                    </div>
+                }
+            </div>
+        </div>
+    </div>
+</section>
+
+@{
+    int startPage = Math.Max(1, ViewBag.CurrentPage - 2);
+    int endPage = Math.Min(ViewBag.NumOfPage, ViewBag.CurrentPage + 2);
+}
+
+<div class="container">
+    <ul class="pagination row">
+        @using (Html.BeginForm("Fillter", "Diamonds", FormMethod.Post, new { id = "paginationForm" }))
+        {
+            @Html.AntiForgeryToken()
+            <input type="hidden" name="page" id="pageNumber" value="" />
+            <input type="hidden" name="SearchTerm" value="@ViewBag.SearchTerm" />
+            <input type="hidden" name="Clarity" value="@ViewBag.SelectedClarity" />
+            <input type="hidden" name="Cut" value="@ViewBag.SelectedCut" />
+            <input type="hidden" name="Color" value="@ViewBag.SelectedColor" />
+            <input type="hidden" name="Shape" value="@ViewBag.SelectedShape" />
+            <input type="hidden" name="MinPrice" value="@ViewBag.minPrice" />
+            <input type="hidden" name="MaxPrice" value="@ViewBag.maxPrice" />
+            <input type="hidden" name="MinCaratWeight" value="@ViewBag.minCaratWeight" />
+            <input type="hidden" name="MaxCaratWeight" value="@ViewBag.maxCaratWeight" />
+            if (ViewBag.CurrentPage > 3)
+            {
+                <li class="page-item col-lg-2">
+                    <button type="button" class="btn btn-link" onclick="setPageValue(1);"><span class="lnr lnr-chevron-left"> </span></button>
+                </li>
+            }
+            for (int i = startPage; i <= endPage; i++)
+            {
+                <li class="page-item col-lg-1 @(i == ViewBag.CurrentPage ? "active" : "")">
+                    <button type="button" class="btn btn-link @(i == ViewBag.CurrentPage ? "selected" : "")" onclick="setPageValue(@i);">@i</button>
+                </li>
+            }
+            if (ViewBag.CurrentPage < ViewBag.NumOfPage - 5)
+            {
+                <li class="page-item col-lg-1">
+                    <button type="button" class="btn btn-link" onclick="setPageValue(@ViewBag.NumOfPage);">Last</button>
+                </li>
+            }
+        }
+    </ul>
+</div>
+
+<script>
+    function setPageValue(page) {
+        document.getElementById("pageNumber").value = page;
+        document.getElementById("paginationForm").submit();
+    }
+</script>
+
+@Html.Hidden("CurrentPage", (int)ViewBag.CurrentPage)
+@Html.Hidden("PageSize", 12)
+}
 <script src="~/Scripts/ProductJs/custom.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
 <script src="~/Scripts/ProductJs/bootstrap.min.js"></script>
